# project-replica

./: .gitignore  OLLAMA_WORKFLOW.md  README.md  create_modelfile.py  export_gdocs.sh  export_gmail.sh  export_imessages.sh  export_lora.py  finetune.py  inference.py  ollama_export.sh  pyproject.toml  requirements.txt  run_all.sh
gdocs/: export_gdocs.py  to_final_file.py
gmail/: README.md  export_gmail.py  to_final_file.py
messages/: _load_msgs.py  _to_final_file.py  export_imessages.py  export_imessages_regular.py  export_imessages_replies.py  fix_db.sh  get_addressbook.py  to_final_file.py  to_final_jsonl.py
static/: chat.html
